--- a/lawwa-web-revised/membership.html
+++ b/lawwa-web-revised/membership.html
@@ -106,19 +106,18 @@
     <!-- Header End -->
    
     <!-- Cta Section Begin -->
-    <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" style="display: block; height: 100%; max-height: 550px;
-    margin-left: auto;
-    margin-right: auto;
-    ">
+    <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" 
+    style="display: block; height: 100%; max-height: 550px; margin-left: auto; margin-right: auto;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="cta-text">
                         <h2>Ready To Join?</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore<br /> magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas.</p>
-                        <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="cust-lawwa-gradient">Join Today</a>
+                        <p >We Are At The Forefront Of The Beauty Industry<br />
+                          As Malaysia's First E-Hailing Beauty Digitalisation Platform<br />
+                          We Are Driven Providers Of The Lawwa Lifestyle Of True Beauty And Wellness For All
+                        </p>
+                        <a href="https://booking.lawwa.online/lawwa/sign-up.php" class="cust-lawwa-gradient">JOIN IN 3 EASY STEPS</a>
                     </div>
                 </div> 
             </div>
@@ -134,9 +133,11 @@
           <div class="col-lg-12">
               <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                   <h3>Membership Benefits</h3>
-                  <p>Becoming a member of the Lawwa.Asia Program rewards you with exclusive treats you cannot get anywhere else ! Blossom into a new you! Its always about care, security and exclusive with Lawwa.Asia.</p>
-                  <p>Malaysia’s first pre-Booking Mobile Personal Beauty Therapist application. Lawwa.Asia Personal Beauty Therapist (PBT) is a trained and qualified beauty treatment practitioner and is legally registered with the Lawwa.Asia academy that will serve and assist customers on the appropriate treatment to obtain the best results.
-                    The Wow is in the results. Our concerned is mainly on quality, so the recruitment of these Therapist will go through  compulsory stages which are Sesi Taklimat & Temuduga (STT), Kursus Latihan Asas Usahawan Kecantikan Bergerak Norma Baharu (KLAUKBNB) and Kelas Lanjutan Modul in Lawwa.Asia Beauty Digitalisation Academy from time to time.
+                  <p>A member of the Lawwa.Asia program benefits the absolute best of the full Lawwa.Asia lifestyle combination. <br/>
+                    Blossom into a new you with our rewarding service packages to bring out your beauty! 
+                    Enjoy our product selection that brings you to your ideal wellness health goals! <br/>
+                    Earn rewarding and exclusive treats and deals you cannot get anywhere else! 
+                    All at a unbeatable value
                     </p>
                 </div>
           </div>
@@ -147,52 +148,52 @@
                   <div class="so-item">
                       <div class="so-title">
                           <div class="so-number">01</div>
-                          <h5>Access To Lawwa Services</h5>
+                          <h5>Lawwa Services</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Our service selection is competitively designed to address the beauty needs of all our customers. All our beauty threapists are passionately ready to deliver our exclusive services to you.</p>
                   </div>
                   <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number">02</div>
-                          <h5>Access To Lawwa Products</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
+                    <div class="so-title">
+                        <div class="so-number">02</div>
+                        <h5>Lawwa communtity</h5>
+                    </div>
+                    <p>Join a community of like minded driven beauty goal getters. When everyone is commited to the betterment of themselves, we can all reach a better tomorrow.
+                      Lawwa.Asia is determined to uplift the b40 status of our Personal Beauty Therapists and will unfailingly deliver our exqusite lifetyle to our loyal customers.
+                    </p>
+                </div>
                   <div class="so-item">
                       <div class="so-title">
                           <div class="so-number">03</div>
-                          <h5>Membership Kit</h5>
+                          <h5>Membership Kit And Promotions</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Enjoy our exclusive membership kit when you complete your registration today with lots of Lawwa goodies your just dont want to miss. Our members are also eligbile to receive all of Lawwa.Asia's promotional and seasonal offers, coupons, and giveaways!</p>
                   </div>
               </div>
               <div class="col-lg-6">
+                <div class="so-item">
+                  <div class="so-title">
+                      <div class="so-number">04</div>
+                      <h5>Lawwa Products</h5>
+                  </div>
+                  <p>A quality set of products that enrich beauty experience. From our distinct towels, to our &bull; product name here &bull;, All our products are held to the Lawwa.Asia standards to deliver the ultimate service experience </p>
+              </div>
                   <div class="so-item">
                       <div class="so-title">
-                          <div class="so-number">04</div>
-                          <h5>Lawwa communtity</h5>
+                          <div class="so-number">05</div>
+                          <h5>E-Hailing Beauty Therapists</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>Lawwa.Asisa offers Malaysia wide service with our easy to use <a href="https://booking.lawwa.online/lawwa/" class="lawwa-blue-text">booking app</a> 
+                        designed to present you all our services at the click of a button. Find Us On The Apple Store & Google Playstore; Lawwa Asia 
+                      </p>
                   </div>
                   <div class="so-item">
                       <div class="so-title">
-                          <div class="so-number">02</div>
-                          <h5>Malaysia wide service</h5>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                  </div>
-                  <div class="so-item">
-                      <div class="so-title">
-                          <div class="so-number">03</div>
+                          <div class="so-number">06</div>
                           <h5>Help Us Fight Covid</h5>
                       </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      <p>With the pandemic still at large, Lawwa.Asia stands as a savior to all those who have beauty and wellness needs.
+                         We employ strictly regulated standard operating procedures (SOPs) in our operations to ensure safety and protection 
+                         while we deliver our services conviniently to your location</p>
                   </div>
               </div>
           </div>
