--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -143,9 +143,9 @@
                     <!-- <h3 class="gradient-text">Services & Related Products</h3> -->
                     <h3 class="gradient-text">Products & Services</h3>
                         <p>
-                          Immerse in our service that certainly bring relaxation and comfort to you. 
-                          Our various service will cope in every desire you had. 
-                          We will deliver our Professional Beauty Therapist to pamper you.
+                          Immerse in our finely curated services that certainly bring relaxation and comfort to you at your doorstep. 
+                          Our wide range of services will cater to every beautiful desire you have. 
+                          Our Professional Beauty Therapists are passionately ready to bring out the #Lawwa You.
                         </p>
                     </div>
                 </div>
@@ -159,7 +159,8 @@
                         <div class="bi-text">
                             <h5><a href="./facial.html">Facial</a>
                             </h5>
-                            <p>Facial is a basic skin treatment that cleanses pores, exfoliates dead skin and treats common skin condition with a custom mask. The service we provide will guaranteed to rejuvenate and nourish your faces, making your skin healthier and look younger. </p>
+                            <p>A Facial is a common skin treatment that cleanses pores, exfoliates dead skin and treats typical skin conditions with a beauty masks.
+                              The service Lawwa.Asia provides, is guaranteed to rejuvenate your skin while also nourishing it to have your skin healthier and you looking younger. </p>
                         </div>
                     </div>
                     <div class="blog-item">
@@ -169,7 +170,7 @@
                       <div class="bi-text">
                           <h5><a href="./facial.html">Make Up</a>
                           </h5>
-                          <p>Build your confidence on, be #Lawwa be you. We have every “look” on every occasion. Be it for wedding , interview and performance, we have it all ! </p>
+                          <p>Let us help you rebuild your confidence with a #Lawwa you. We have every “look”, for every occasion. Be it for wedding , interview and performance, we have it all for you at record time! </p>
                       </div>
                   </div>
                   <div class="blog-item">
