--- a/lawwa-web-revised/academy.html
+++ b/lawwa-web-revised/academy.html
@@ -171,8 +171,8 @@
         <div class="row">
           <div class="col-lg-12">
               <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
-                  <h3>Lawwa Academy</h3>
-                  <span> The Lawwa.Asia Beauty Digitalisation Academy (LABDA), brings transforms our chosen students into expert beauty therapist here at Lawwwa.Asia. With our select courses and carefully refined cirrculum/syllabus we provide you with the theoretical and practical knowldege needed to be a professional beautician here at Lawwa.Asia. </span>
+                  <h3>Lawwa.Asia Beauty Digitalisation Academy</h3>
+                  <span> The Lawwa Academy, transforms our chosen students into expert beauty therapists here at Lawwwa.Asia. With our select courses and carefully refined cirrculum/syllabus we provide you with the theoretical and practical knowldege needed to be a professional beautician here at Lawwa.Asia. </span>
               </div>
           </div>
         </div>
