--- a/lawwa-web-revised/gallery.html
+++ b/lawwa-web-revised/gallery.html
@@ -114,9 +114,9 @@
                         <ul>
                             <li class="active" data-filter="*">LAWWA.ASIA</li>
                             <!-- <li data-filter=".fashion"></li> -->
-                            <li data-filter=".lifestyle">STT</li>
-                            <li data-filter=".natural">KLAUKBNB</li>
-                            <li data-filter=".wedding">ACADEMY</li>
+                            <li data-filter=".recruitment">RECRUITMENT</li>
+                            <li data-filter=".pbt">PBT</li>
+                            <li data-filter=".academy">ACADEMY</li>
                             <!-- <li data-filter=".videos" aria-disabled="true">Videos</li> -->
                         </ul>
                     </div>
@@ -129,19 +129,15 @@
                     <div class="gallery-filter">
                         <a href="img/lawwa-img/web-gallery/DIN22439.JPG" class="gf-icon image-popup">
                             <!-- <div class="gf-item set-bg fashion" data-setbg="img/gallery/gallery-1.jpg"> -->
-                              <div class="gf-item large-small-height set-bg natural" data-setbg="img/lawwa-img/web-gallery/DIN22439.JPG">
+                              <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/web-gallery/DIN22439.JPG">
                             <span class="icon_plus"></span>
                         </a>
                         </div>
-                        <div class="gf-item small-height set-bg lifestyle" data-setbg="img/gallery/gallery-2.jpg">
-                            <a href="img/gallery/gallery-2.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
+                        <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/web-gallery/tryrty.jpg">
+                            <a href="img/lawwa-img/web-gallery/tryrty.jpg" class="gf-icon image-popup">
+                              <span class="icon_plus"></span></a>
                         </div>
-                        <div class="gf-item large-small-height set-bg natural" data-setbg="img/lawwa-img/web-gallery/tryrty.jpg">
-                            <a href="img/lawwa-img/web-gallery/tryrty.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item small-height set-bg wedding" data-setbg="img/gallery/gallery-4.jpg">
+                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/gallery/gallery-4.jpg">
                             <a href="img/gallery/gallery-4.jpg" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
@@ -153,6 +149,10 @@
                             <a href="img/gallery/gallery-6.jpg" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
+                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/web-gallery/pbt.jpg">
+                          <a href="img/lawwa-img/web-gallery/pbt.jpg" class="gf-icon image-popup">
+                            <span class="icon_plus"></span></a>
+                      </div>
                         <div class="gf-item set-bg videos" data-setbg="img/gallery/gallery-7.jpg">
                             <a href="img/gallery/gallery-7.jpg" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
