--- a/lawwa-web-revised/profile.html
+++ b/lawwa-web-revised/profile.html
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ph-text">
-                        <h2>Lawwa Asia</h2>
+                        <h1 style="color: #FFF;">Lawwa.Asia</h1>
                     </div>
                 </div>
             </div>
@@ -139,10 +139,23 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="block">
                         <div class="section-title">
-                            <h3>Who We Are</h3>
-                            <p>random text</p>
+                            <h3>Introducing Lawwa.Asia
+                              <br/> A whole new era of beauty digitalisation.</h3>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
+                        <p>
+                          Introducing Lawwa.Asia, a whole new era of beauty digitalisation.
+                        </p>
+                        <p>
+                          Lawwa.Asia is a revolution in the beauty industry recognized as one of the pioneers in Malaysia’s Beauty Digitalization
+                          platform providing e-commerce services , implementing SOP aligned with the new norm lifestyle in this pandemic. 
+                          We provide beauty solutions to you in the comfort of your home.
+                        </p>
+                        <p>
+                          Your personal beauty therapists are groomed through our elite academy (LABDA) containing various kinds of 
+                          theoretical and practical courses to establish a one of a kind curriculum to develop beauty experts ready to 
+                          offer their services all across Malaysia.
+                        </p>
+                        <br />
                     </div>
                 </div><!-- .col-md-7 close -->
                 <div class="col-md-5 col-sm-12">
@@ -154,6 +167,50 @@
         </div>
     </section>
 
+    <section class="about section">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-7 col-sm-12">
+                  <div class="block">
+                      <div class="section-title">
+                          <h3>Beauty Beyond Boundaries</h3>
+                      </div>
+                      <p>Our organization aims to provide relief in the face of the pandemic with regulated practices designed to prevent 
+                        the spread of COVID-19 while offering a unique and healthy lifestyle option at your convenience. 
+                        Lawwa.Asia is the solution to the problems caused by covid-19. Lawwa is your beauty lifestyle.
+                      </p>
+                      <p>Our organization aims to provide relief in the face of the pandemic with regulated practices designed to prevent 
+                        the spread of COVID-19 while offering a unique and healthy lifestyle option at your convenience. 
+                        Lawwa.Asia is the solution to the problems caused by covid-19. Lawwa is your beauty lifestyle.
+                      </p>
+                      <p>
+                        <b><i>#Lawwa is love #Lawwa is care #Lawwa is hope.</i></b>
+                      </p>
+                      <br />
+                  </div>
+              </div>
+              <div class="col-md-5 col-sm-12">
+                <div class="block">
+                    <div class="section-title">
+                        <h3>Beauty Goal Getter</h3>
+                    </div>
+                    <p>
+                      This campaign is to inject awareness on how to select suitable products for various beauty treatments among women 
+                      of all ages, physical looks and their professional background in order to achieve best results for the aspiration 
+                      of their beauty.
+                    </p>
+                    <p>
+                      The leading of beauty Industry with the concept of digitalisation as a new norm of healthy lifestyle up to the global level.
+                    </p>
+                    <p>
+                      <b><i>#LawwaYou</i></b>
+                    </p>
+                    <br />
+                </div>
+            </div>
+          </div>
+      </div>
+  </section>
 
     <!-- <br>
     <section>
@@ -197,29 +254,6 @@
             </div>
         </div>
     </section>
-
-    <br><br>
-
-    <section class="about section">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-7 col-sm-12">
-                  <div class="block">
-                      <div class="section-title">
-                          <h3>Fight Covid-19 Together</h3>
-                          <p>random text</p>
-                      </div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id </p>
-                  </div>
-              </div><!-- .col-md-7 close -->
-              <div class="col-md-5 col-sm-12">
-                  <div class="block">
-                      <img src="img/lawwa-img/sop-poster-01.jpg" alt="Img">
-                  </div>
-              </div><!-- .col-md-5 close -->
-          </div>
-      </div>
-  </section>
 
   <br><br>
 
