--- a/lawwa-web-revised/makeup.html
+++ b/lawwa-web-revised/makeup.html
@@ -122,12 +122,12 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
-                    <h3 class="gradient-text">Facial Services</h3>
+                    <h3 class="gradient-text">Make Up Services</h3>
                         <p> 
-                          Our signature facial is a skin treatment that cleanses pores, exfoliates away dead skin cells, and treats common skin concerns. We got you covered !
+                          Build your confidence, be #Lawwa be you. We have every “look” on every occasion. Be it for wedding, interview and performance, we have it all !
                         </p>
                         <p> 
-                          Experience our signature now !
+                          Be Lawwa with our make-up look every day.
                         </p>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">Lawwa Deep Cleansing Facial</h3>
+                        <h3 class="lawwa-blue-text">1</h3>
                         <p>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                           magna aliqua. Quis ipsum suspendisse ultrices gravida.
@@ -146,7 +146,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">Lawwa Hydrating Facial</h3>
+                        <h3 class="lawwa-blue-text">2</h3>
                         <p>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.
@@ -156,7 +156,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">Lawwa Natural Detoxifying Facial</h3>
+                        <h3 class="lawwa-blue-text">3</h3>
                         <p>
                           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.
@@ -166,7 +166,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                       <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                      <h3 class="lawwa-blue-text">Lawwa Signature Acne Clearing Treatment</h3>
+                      <h3 class="lawwa-blue-text">4</h3>
                       <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                           magna aliqua. Quis ipsum suspendisse ultrices gravida.
@@ -176,7 +176,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                    <h3 class="lawwa-blue-text">Lawwa Signature Pigmentation Treatment</h3>
+                    <h3 class="lawwa-blue-text">5</h3>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         magna aliqua. Quis ipsum suspendisse ultrices gravida.
@@ -186,7 +186,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                    <h3 class="lawwa-blue-text">Lawwa Intensive Anti-wrinkle Skin Therapy</h3>
+                    <h3 class="lawwa-blue-text">6</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                       magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                   </div>
@@ -194,7 +194,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                    <h3 class="lawwa-blue-text">Lawwa Intensive Photon Technology Skin Therapy</h3>
+                    <h3 class="lawwa-blue-text">7</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                       magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                   </div>
