--- a/lawwa-web-revised/services.html
+++ b/lawwa-web-revised/services.html
@@ -143,10 +143,13 @@
                     <!-- <h3 class="gradient-text">Services & Related Products</h3> -->
                     <h3 class="gradient-text">Products & Services</h3>
                         <p>
-                          Immerse in our finely curated services that certainly bring relaxation and comfort to you at your doorstep. 
-                          Our wide range of services will cater to every beautiful desire you have. 
-                          Our Professional Beauty Therapists are passionately ready to bring out the #Lawwa You.
-                        </p>
+                        Immerse in our service that certainly bring relaxation and comfort to you. 
+                        Our various service will cope in every desire you have. 
+                        Take a peek at our offer, we deliver various skincare solutions for you done by our Professional Beauty Therapist.
+                      </p>
+                      <p>
+                      Our aim is to make you Lawwa. Be Lawwa, Feel Lawwa. #LAWWAYOU
+                      </p>
                     </div>
                 </div>
             </div>
@@ -157,10 +160,12 @@
                             <img src="img/lawwa-img/facial-alt.jpg" alt="">
                         </div>
                         <div class="bi-text">
-                            <h5><a href="./facial.html">Facial</a>
+                            <h5>
+                              <a href="./facial.html">Facial</a>
                             </h5>
-                            <p>A Facial is a common skin treatment that cleanses pores, exfoliates dead skin and treats typical skin conditions with a beauty masks.
-                              The service Lawwa.Asia provides, is guaranteed to rejuvenate your skin while also nourishing it to have your skin healthier and you looking younger. </p>
+                            <p>
+                             Our signature Facial services are guaranteed to freshen up your skins and remove impurities. We exclusively use our product to boost your skin conditions.
+                            </p>
                         </div>
                     </div>
                     <div class="blog-item">
@@ -168,9 +173,12 @@
                         <img src="img/lawwa-img/makeup-alt.jpg" alt="">
                       </div>
                       <div class="bi-text">
-                          <h5><a href="./facial.html">Make Up</a>
+                          <h5>
+                            <a href="./makeup.html">Make Up</a>
                           </h5>
-                          <p>Let us help you rebuild your confidence with a #Lawwa you. We have every “look”, for every occasion. Be it for wedding , interview and performance, we have it all for you at record time! </p>
+                          <p>
+                            Explore Lawwa look to be part of your memories, we have specialist in make- up to create the look that you dream off.
+                          </p>
                       </div>
                   </div>
                   <div class="blog-item">
@@ -178,9 +186,12 @@
                       <img src="img/lawwa-img/massage-alt.jpg" alt="">
                     </div>
                     <div class="bi-text">
-                        <h5><a href="./massage.html">Massage</a>
+                        <h5>
+                          <a href="./massage.html">Massage</a>
                         </h5>
-                        <p>Massage is the stroking, kneading, warming, rolling and pressing of skin and muscles. There are lots of different kinds of massage, each with broadly different origins and aims - some focus on soothing muscle pain; others on increasing energy levels; some aim to improve a specific physical condition; others simply to help you relax. </p>
+                        <p>
+                          We remove the hassle for you to go out, start your car and drive to the massage parlor. We bring the massage parlor for you. Be the first to experience it.
+                        </p>
                     </div>
                 </div>
                 <div class="blog-item">
@@ -188,9 +199,12 @@
                     <img src="img/lawwa-img/confinement-alt.jpg" alt="">
                   </div>
                   <div class="bi-text">
-                      <h5><a href="./facial.html">Confinement Care</a>
+                      <h5>
+                        <a href="./confinement.html">Confinement Care</a>
                       </h5>
-                      <p>A traditional practice following childbirth. Those who follow these customs typically begin immediately after the birth, and the seclusion or special treatment lasts for a culturally variable length: typically for one month or 30 days, up to 40 days, two months or 100 days.</p>
+                      <p>
+                       Our confinement package will cater your needs. How you treat yourself in this state is crucial to us. Let us be the one to pamper you and groom you back to perfection.
+                      </p>
                   </div>
               </div>
               <div class="blog-item">
@@ -198,7 +212,8 @@
                   <img src="img/lawwa-img/treatment-alt.jpg" alt="">
                 </div>
                 <div class="bi-text">
-                    <h5 style="color: rgba(42,56,143,1) !important;"><a href="./facial.html">Treatment</a>
+                    <h5 style="color: rgba(42,56,143,1) !important;">
+                      <a href="./treatment.html">Treatment</a>
                     </h5>
                     <p>
                       Pamper yourself with our signature full-body treatment with various techniques, that improve blood circulation, skin appearance, and boost your body conditions.
@@ -210,7 +225,8 @@
                 <img src="img/lawwa-img/add-on.jpeg" alt="">
               </div>
               <div class="bi-text">
-                  <h5><a href="./facial.html">Add-ons</a>
+                  <h5>
+                    <a href="./addon.html">Add-ons</a>
                   </h5>
                   <p>
                     Enjoy our mani-pedi session. We also offered waxing, henna drawing and many more. Browse for more info !
