--- a/lawwa-web-revised/treatment.html
+++ b/lawwa-web-revised/treatment.html
@@ -59,8 +59,8 @@
             <div class="col-7 col-lg-8 col-md-7 col-xl-7 col-sm-8">
             <nav class="nav-menu mobile-menu">
               <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Products & Services</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li class="active"><a href="./services.html">Products & Services</a></li>
                 <li><a href="./membership.html">Membership</a></li>
                 <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
                     <ul class="dropdown">
@@ -102,111 +102,147 @@
         </div>
         </div>
       </div>
-    </header>
+    </header> 
     <!-- Header End -->
-<br>
-    <!-- Gallery Section Begin -->
-    <div class="gallery-section spad">
+
+      <br>
+      <section>
+        <div class="container-fluid">
+          <div class="col-lg-12 p-0 ">
+            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+          </div>
+        </div>
+      </section>
+      <br>
+
+    <!-- Services Section Begin -->
+    <br>
+    <section class="services-section services-normal spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="filter-controls">
-                        <ul>
-                            <li class="active" data-filter="*">LAWWA.ASIA</li>
-                            <!-- <li data-filter=".fashion"></li> -->
-                            <li data-filter=".recruitment">RECRUITMENT</li>
-                            <li data-filter=".pbt">PBT</li>
-                            <li data-filter=".academy">ACADEMY</li>
-                            <!-- <li data-filter=".videos" aria-disabled="true">Videos</li> -->
-                        </ul>
+                  <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
+                    <h3>Treatment Services</h3>
+                        <!-- <p>Lorem .</p> -->
+                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find 1 that  suit your mood now !</p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 p-0">
-                    <div class="gallery-filter">
-                        <a href="img/lawwa-img/web-gallery/DIN22439.JPG" class="gf-icon image-popup">
-                            <!-- <div class="gf-item set-bg fashion" data-setbg="img/gallery/gallery-1.jpg"> -->
-                              <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/web-gallery/DIN22439.JPG">
-                            <span class="icon_plus"></span>
-                        </a>
-                        </div>
-                        <div class="gf-item large-small-height set-bg academy" data-setbg="img/lawwa-img/web-gallery/tryrty.jpg">
-                            <a href="img/lawwa-img/web-gallery/tryrty.jpg" class="gf-icon image-popup">
-                              <span class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/web-gallery/DIN22668.jpg">
-                            <a href="img/lawwa-img/web-gallery/DIN22668.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/web-gallery/DIN22473.jpg">
-                            <a href="img/lawwa-img/web-gallery/DIN22473.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <!-- <div class="gf-item large-height set-bg natural" data-setbg="img/gallery/gallery-6.jpg">
-                            <a href="img/gallery/gallery-6.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div> -->
-                        <div class="gf-item large-small-height set-bg pbt" data-setbg="img/lawwa-img/web-gallery/pbt.jpg">
-                          <a href="img/lawwa-img/web-gallery/pbt.jpg" class="gf-icon image-popup">
-                            <span class="icon_plus"></span></a>
-                      </div>
-                        <!-- <div class="gf-item set-bg videos" data-setbg="img/gallery/gallery-7.jpg">
-                            <a href="img/gallery/gallery-7.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item set-bg fashion" data-setbg="img/gallery/gallery-8.jpg">
-                            <a href="img/gallery/gallery-8.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item medium-large-height set-bg videos" data-setbg="img/gallery/gallery-9.jpg">
-                            <a href="img/gallery/gallery-9.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item large-height set-bg fashion" data-setbg="img/gallery/gallery-6.jpg">
-                            <a href="img/gallery/gallery-6.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div> -->
-                        <!-- <div class="gf-item set-bg wedding" data-setbg="img/gallery/gallery-10.jpg">
-                            <a href="img/gallery/gallery-10.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item large-height set-bg wedding" data-setbg="img/gallery/gallery-11.jpg">
-                            <a href="img/gallery/gallery-11.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item small-height set-bg wedding" data-setbg="img/gallery/gallery-12.jpg">
-                            <a href="img/gallery/gallery-12.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item set-bg wedding" data-setbg="img/gallery/gallery-13.jpg">
-                            <a href="img/gallery/gallery-13.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item large-height set-bg wedding" data-setbg="img/gallery/gallery-14.jpg">
-                            <a href="img/gallery/gallery-14.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item set-bg wedding" data-setbg="img/gallery/gallery-15.jpg">
-                            <a href="img/gallery/gallery-15.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item large-height set-bg wedding" data-setbg="img/gallery/gallery-16.jpg">
-                            <a href="img/gallery/gallery-16.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div>
-                        <div class="gf-item medium-small-height set-bg wedding" data-setbg="img/gallery/gallery-17.jpg">
-                            <a href="img/gallery/gallery-17.jpg" class="gf-icon image-popup"><span
-                                    class="icon_plus"></span></a>
-                        </div> -->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3 class="lawwa-blue-text">1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3 class="lawwa-blue-text">2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3 class="lawwa-blue-text">3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Gallery Section End -->
+    </section>
+    <!-- Services Section End -->
+
+    <!-- Services Option Section Begin -->
+    <section class="services-option">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
+                        <h2 class="gradient-text">Related Products</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                            incididunt ut labore et dolore.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                  <div class="so-item">
+                    <div class="so-title">
+                      <div class="so-number">01</div>
+                      <h5>Product</h5>
+                      <br>
+                      <div class="row">
+                        <div class="col-5 col-sm-2 col-md-2" style="padding-left: 0;">
+                          <img src="img/lawwa-img/product1.jpg" alt="">
+                      </div>
+                      <div class="col-7 col-sm-10 col-md-10">
+                        <p>Lorem ipsum dolor sit   amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="so-item">
+                    <div class="so-title">
+                      <div class="so-number">02</div>
+                      <h5>Product</h5>
+                      <br>
+                      <div class="row">
+                        <div class="col-5 col-sm-4 col-md-2" style="padding-left: 0;">
+                          <img src="img/lawwa-img/product1.jpg" alt="">
+                      </div>
+                      <div class="col-7 col-sm-6 col-md-10">
+                        <p>Lorem ipsum dolor sit   amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+                    <!-- <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">03</div>
+                            <h5>Product</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div> -->
+                </div>
+
+
+
+            </div>
+        </div>
+    </section>
+    <!-- Services Option Section End -->
+
+        <!-- Portfolio Hero Section Begin -->
+        <!-- class="ad-banner set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" -->
+        <section class="ad-banner">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12" >
+                      <div class="ph-text set-bg" data-setbg="img/lawwa-img/DSC08056.jpg">
+                          <h2>Join Today For Full Access To Our Services</h2>
+                          <p>
+                            <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank"
+                            class="cust-lawwa-gradient">
+                            JOIN NOW
+                          </a>
+                          </p>
+                          
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <br><br>
 
  <!-- Footer Section Begin -->
  <footer class="footer-section">
