--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -324,25 +324,31 @@
             </a>
           </div>
           <div class="cs-item">
+            <a href="./makeup.html">
             <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/makeup-alt.jpg"></div> -->
             <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/makeupedit.jpg"></div>
             <div class="cs-text">
               <h4 class="lawwa-blue-text">Make Up</h4>
             </div>
+          </a>
           </div>
           <div class="cs-item">
+            <a href="./treatment.html">
             <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/treatment.jpg"></div> -->
             <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/treatment/treatmenweb.jpg"></div>
             <div class="cs-text">
               <h4 class="lawwa-blue-text">Treatment</h4>
             </div>
+          </a>
           </div>
           <div class="cs-item">
+            <a href="./confinement.html">
             <!-- <div class="cs-pic set-bg" data-setbg="img/lawwa-img/confinement-alt.jpg"></div> -->
             <div class="cs-pic set-bg" data-setbg="img/lawwa-img/commercial-approved/confinement.jpg"></div>
             <div class="cs-text">
               <h4 class="lawwa-blue-text">Confinement Care</h4>
             </div>
+          </a>
           </div>
           <!-- <div class="cs-item">
             <div
