--- a/lawwa-web-revised/addon.html
+++ b/lawwa-web-revised/addon.html
@@ -79,7 +79,7 @@
                     <ul class="dropdown">
                         <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="./events.html">Newsletter</a></li>
-                        <li><a href="./blog-details.html">Tips</a></li>
+                        <!-- <li><a href="./blog-details.html">Tips</a></li> -->
                     </ul>
                 </li>
                 <!-- <li></li> -->
@@ -124,7 +124,10 @@
                   <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                     <h3>Add-On Services</h3>
                         <!-- <p>Lorem .</p> -->
-                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find 1 that  suit your mood now !</p>
+                          <p>
+                            With a large vareity of add-ons, you can make the most of your service appointments by customizing them to level up your beauty even
+                             further. Lawwa.Asia add-ons are available to all customers for an even greater beauty experience.
+                          </p>
                     </div>
                 </div>
             </div>
@@ -132,25 +135,25 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <h3 class="lawwa-blue-text">HENNA</h3>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <h3 class="lawwa-blue-text">MANICURE</h3>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                        <h3 class="lawwa-blue-text">PEDICURE</h3>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
                 </div>
             </div>
