--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -79,7 +79,7 @@
                     <ul class="dropdown">
                         <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="./events.html">Newsletter</a></li>
-                        <li><a href="./blog-details.html">Tips</a></li>
+                        <!-- <li><a href="./blog-details.html">Tips</a></li> -->
                     </ul>
                 </li>
                 <!-- <li></li> -->
@@ -129,11 +129,16 @@
                         <p> 
                           Experience our signature now !
                         </p>
+
+                        <p>
+                          Alternative:<br>
+                        
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-4 col-md-6 col-sm-6"> 
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
                         <h3 class="lawwa-blue-text">Lawwa Deep Cleansing Facial</h3>
