--- a/lawwa-web-revised/gallery.html
+++ b/lawwa-web-revised/gallery.html
@@ -79,7 +79,7 @@
                     <ul class="dropdown">
                         <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="./events.html">Newsletter</a></li>
-                        <li><a href="./blog-details.html">Tips</a></li>
+                        <!-- <li><a href="./blog-details.html">Tips</a></li> -->
                     </ul>
                 </li>
                 <!-- <li></li> -->
