--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -80,7 +80,7 @@
                     <ul class="dropdown">
                         <li><a href="./gallery.html">Gallery</a></li>
                         <li><a href="./events.html">Newsletter</a></li>
-                        <li><a href="./blog-details.html">Tips</a></li>
+                        <!-- <li><a href="./blog-details.html">Tips</a></li> -->
                     </ul>
                 </li>
                 <!-- <li></li> -->
@@ -444,9 +444,9 @@
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="fs-widget d-none d-md-block">
-              <div class="counterDisplay d-none">
+              <!-- <div class="counterDisplay d-none">
                 Vistor counter
-              </div>
+              </div> -->
               <h5>Quick links</h5>
               <ul>
                 <li><a href="#">Home</a></li>
@@ -461,7 +461,7 @@
             </div>
           </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-11">
             <!-- <div class="fa-social" style="border-top: 0; align: center">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
@@ -478,6 +478,11 @@
                 Copyright &copy; 2021 All rights reserved | Trokatech Resources
               </p>
             </div>
+          </div>
+          <div class="col-lg-1">
+            <div class="counterDisplay float-right visit-counter">
+              <button class="btn btn-block" disabled></span>
+           </div>
           </div>
         </div>
       </div>
