--- a/lawwa-web-revised/addon.html
+++ b/lawwa-web-revised/addon.html
@@ -135,7 +135,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">HENNA</h3>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Henna</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
@@ -143,7 +143,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">MANICURE</h3>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Manicure</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
@@ -151,7 +151,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">PEDICURE</h3>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Pedicure</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
