--- a/lawwa-web-revised/treatment.html
+++ b/lawwa-web-revised/treatment.html
@@ -132,7 +132,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">1</h3>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Treatment Type 1</h5>
                         <p>
 
                         </p>
@@ -141,7 +141,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">2</h3>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Treatment Type 2</h5>
                         <p>
 
                         </p>
@@ -150,7 +150,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h3 class="lawwa-blue-text">3</h3>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Treatment Type 3</h5>
                         <p>
                           
                         </p>
