--- a/lawwa-web-revised/courses.html
+++ b/lawwa-web-revised/courses.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/venobox.css" >
     <link rel="stylesheet" href="css/style.css" type="text/css" />
   </head>
 
@@ -60,9 +61,22 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Products & Services</a></li>
+
+                <li><a href="./services.html">Products & Services</a>
+                  <ul class="dropdown">
+                      <li><a href="./facial.html">Facial</a></li>
+                      <li><a href="./makeup.html">Make Up</a></li>
+                      <li><a href="./massage.html">Massage</a></li>
+                      <li><a href="./confinement.html">Confinement</a></li>
+                      <li><a href="./treatment.html">Treatment</a></li>
+                      <li><a href="./addon.html">Add Ons</a></li>
+                  </ul>
+              </li>
+
+                <!-- <li><a href="./services.html">Products & Services</a></li> -->
+
                 <li><a href="./membership.html">Membership</a></li>
-                <li class="active"><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
+                <li  class="active"><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
                     <ul class="dropdown">
                         <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a></li>
                         <li><a lang="en" href="./recruitment.html">Recruitment</a><a lang="bm" href="./recruitment.html">rekruit</a></li>
@@ -93,7 +107,7 @@
               </small>
             </div>
           </div>
-          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline ">
+          <div class="register-div col-xl-2 col-lg-2 col-md-2 d-none d-xs-none d-sm-none d-md-none d-lg-inline">
             <a href="https://booking.lawwa.online/lawwa/sign-up.php" target="_blank">
               <button class="cust-lawwa-ad-btn btn-block">
                 <span style="color: #FFF;">Register</span>
