--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -61,7 +61,20 @@
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Products & Services</a></li>
+
+                <li><a href="./services.html">Products & Services</a>
+                  <ul class="dropdown">
+                      <li><a href="./facial.html">Facial</a></li>
+                      <li><a href="./makeup.html">Make Up</a></li>
+                      <li><a href="./massage.html">Massage</a></li>
+                      <li><a href="./confinement.html">Confinement</a></li>
+                      <li><a href="./treatment.html">Treatment</a></li>
+                      <li><a href="./addon.html">Add Ons</a></li>
+                  </ul>
+              </li>
+
+                <!-- <li><a href="./services.html">Products & Services</a></li> -->
+
                 <li><a href="./membership.html">Membership</a></li>
                 <li><a lang="en" href="./academy.html">Academy</a><a lang="bm" href="./academy.html">Akademy</a>
                     <ul class="dropdown">
@@ -132,6 +145,7 @@
                             <img src="img/lawwa-img/Logo/instagram logo.png" />
                           </div>
                         </a>
+                        <div></div>
                         <a href="#">
                           <div class="" style="max-width: 25px; max-height: 25px;">
                             <img src="img/lawwa-img/Logo/twitter logo.png" />
